Реализовано удаление файлов через отдельную кнопку и через пункт контекстного меню. Реализована передача больших файлов при этом на клиенте отображается линия прогресса. Поддержана навигация по папкам на клиенте и на сервере.